--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ development:
   database: myapp_development
   pool: 5
   username: 
-  password:
+  password: bruh
   timeout: 5000
  
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -30,7 +30,7 @@ development:
  
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: 5432
  
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -41,14 +41,3 @@ development:
   # Defaults to warning.
   #min_messages: notice
  
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: myapp_test
-  pool: 5
-  username: 
-  password:
-  timeout: 5000
